<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/item_bg">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_bookname"
        android:text="@string/borrowed_book_name"
        android:textSize="24sp"
        android:textColor="#ff000000"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookname"
        android:layout_toRightOf="@id/item_bookname"
        android:textSize="20sp"
        android:textColor="#ff000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_borrowtime"
        android:text="@string/borrowed_book_borrowtime"
        android:textSize="24sp"
        android:textColor="#ff000000"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/borrowtime"
        android:layout_toRightOf="@id/item_borrowtime"
        android:textSize="20sp"
        android:textColor="#ff000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_returntime"
        android:text="@string/borrowed_book_returntime"
        android:textSize="24sp"
        android:textColor="#ff000000"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/returntime"
        android:layout_toRightOf="@id/item_returntime"
        android:textSize="20sp"
        android:textColor="#ff000000"/>
</LinearLayout>