<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fffefffd">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_cardname"
            android:id="@+id/user_cardname"
            android:textSize="18sp"
            android:textColor="#ff000000"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_cardname_text"
            android:textSize="18sp"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/user_cardname" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="#ff000000"
            android:id="@+id/user_name"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_text"
            android:textSize="18sp"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/user_name"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_type"
            android:textColor="#ff000000"
            android:id="@+id/user_type"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_type_text"
            android:textSize="18sp"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/user_type"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_college"
            android:textColor="#ff000000"
            android:id="@+id/user_college"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_college_text"
            android:textSize="18sp"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/user_college"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_borrowstate"
            android:textColor="#ff000000"
            android:id="@+id/user_borrowstate"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_borrowstate_text"
            android:textSize="18sp"
            android:textColor="#ff000000"
            android:layout_toRightOf="@id/user_borrowstate"/>
    </RelativeLayout>
</LinearLayout>