<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fffefffd">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_num"
        android:text="@string/item_num"
        android:textSize="20sp"
        android:textColor="#ff000000"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/book_item_num"
        android:layout_toRightOf="@id/item_num"
        android:textSize="18sp"
        android:textColor="#ff5b5b5b"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookname_item"
        android:layout_below="@id/book_item_num">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_name"
            android:textSize="20sp"
            android:text="@string/item_name"
            android:textColor="#ff000000"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/book_item_name"
            android:textSize="18sp"
            android:textColor="#ff5b5b5b"
            android:layout_toRightOf="@id/item_name" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_publish"
        android:textSize="20sp"
        android:textColor="#ff000000"
        android:text="@string/item_publish"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/bookname_item"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/book_item_publish"
        android:textSize="18sp"
        android:textColor="#ff5b5b5b"
        android:layout_below="@id/bookname_item"
        android:layout_toRightOf="@id/item_publish"/>

    <ListView
        android:layout_marginTop="5dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/searchitem_list"
        android:layout_below="@id/item_publish">
    </ListView>
</RelativeLayout>