<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/quote_template"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_num_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_book_num"
            android:textSize="18sp"
            android:text="@string/search_book_num"
            android:textColor="#ff000000"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/booknum"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:singleLine="true"
            android:typeface="sans"
            android:textStyle="bold"
            android:paddingLeft="3sp"
            android:paddingRight="3sp"
            android:layout_toRightOf="@id/search_book_num" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_name_layout"
        android:layout_below="@id/book_num_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_book_name"
            android:textSize="18sp"
            android:text="@string/search_book_name"
            android:textColor="#ff000000"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookname"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:singleLine="true"
            android:typeface="sans"
            android:textStyle="bold"
            android:paddingLeft="3sp"
            android:paddingRight="10dip"
            android:layout_toRightOf="@id/search_book_name" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_author_layout"
        android:layout_below="@id/book_name_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_book_author"
            android:textSize="18sp"
            android:text="@string/search_book_author"
            android:textColor="#ff000000"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookauthor"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:singleLine="true"
            android:typeface="sans"
            android:textStyle="bold"
            android:paddingLeft="3sp"
            android:paddingRight="10dip"
            android:layout_toRightOf="@id/search_book_author" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_press_layout"
        android:layout_below="@id/book_author_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_book_press"
            android:textSize="18sp"
            android:text="@string/search_book_press"
            android:textColor="#ff000000"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bookpress"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:singleLine="true"
            android:typeface="sans"
            android:textStyle="bold"
            android:paddingLeft="3sp"
            android:paddingRight="5dip"
            android:layout_toRightOf="@id/search_book_press" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_place_layout"
        android:layout_below="@id/book_press_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_book_place"
            android:textSize="18sp"
            android:text="@string/search_book_place"
            android:textColor="#ff000000"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/place"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:singleLine="true"
            android:typeface="sans"
            android:textStyle="bold"
            android:paddingLeft="3sp"
            android:paddingRight="5dip"
            android:layout_toRightOf="@id/search_book_place" />
    </RelativeLayout>

</LinearLayout>