<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/copy_right"
        android:padding="12dip"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="by Cheng 制作"
        android:textSize="11sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dip"
        android:id="@+id/start_icon"
        android:src="@drawable/start_icon"
        android:layout_above="@+id/relativeLayout"
        android:layout_centerHorizontal="true" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:id="@+id/app_text">
            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="#ff181818"
                android:textSize="24sp"/>

            <TextView android:id="@+id/version_name"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/version_name"
                android:layout_toRightOf="@id/app_name"
                android:gravity="bottom"
                android:textColor="#ff181818"
                android:paddingBottom="6dip"
                android:textSize="14sp"/>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip"
            android:background="#4c1066ee"
            android:id="@+id/singleline"
            android:layout_below="@id/app_text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="6dip"
            android:text="@string/start_description"
            android:layout_centerHorizontal="true"
            android:textSize="13sp"
            android:layout_below="@+id/singleline" />
    </RelativeLayout>

</RelativeLayout>